# temo

./: Cargo.toml  README.md  TODO.md  config.toml  temo.db
docs/: task.txt  usage.md
src/: lib.rs  main.rs
src/cli/: filter.rs  parse.rs
src/cli/args/: config.rs  create.rs  sync.rs
src/cli/subs/: info.rs  work.rs
src/cli/syntax/: tokens.rs
src/data/: config.rs  db.rs  task.rs
src/runtime/: audio.rs  timer.rs
src/sync/: client.rs  daemon.rs  server.rs
src/utils/: date.rs
