[package]
name = "temo"
version = "0.0.1"
edition = "2021"

[dependencies]
# sync
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"

# db
rusqlite = { version = "0.27.0", features = ["uuid", "time"] }
serde = "1.0.137"
uuid = { version = "1", features = ["v4", "serde", "fast-rng"] }
time = { version = "0.3.9", features = ["serde","serde-human-readable","formatting"] }

# config
serde_json = "1.0.81"
toml = "0.5.9"
serde_derive = "1.0.137"

# args
lexopt = "0.2.0"

# play audio
#cpal = { version = "0.13.5", features = ["jack"] }
rodio = "0.15.0"

# display
tabled = { version = "0.7.0", features = ["color"] }

# daemon
# TODO
signal-hook = "0.3.14"
nix="0.24"
